--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "e-hyun-web",
+  "homepage": "https://www.e-hyun-hospital.kr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -28,6 +31,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "6.3.0",
     "globals": "^16.3.0",
     "slick-carousel": "^1.8.1",
     "typescript": "~5.8.3",
