도메인 변경

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-hyun-web",
-  "homepage": "https://www.e-hyun-hospital.kr",
+  "homepage": "https://www.e-hyun-gumi.kr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
